--- a/App.config
+++ b/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="DbConnection" connectionString="server=wgudb.ucertify.com;user id=U07qpU;password=53689105010;database=U07qpU;persistsecurityinfo=True" />
+  </connectionStrings>
 </configuration>
