--- a/App.config
+++ b/App.config
@@ -4,6 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="DbConnection" connectionString="server=wgudb.ucertify.com;user id=U07qpU;password=53689105010;database=U07qpU;persistsecurityinfo=True" />
+    <add name="DbConnection" 
+         connectionString="Host=localhost;port=3306;Database=Client_Schedule;Username=sqlUser=U07qpU;Password=Passw0rd!;database=U07qpU;persistsecurityinfo=True" 
+         providerName="System.Data.MySQLClient" />
   </connectionStrings>
 </configuration>
