DB class addition and test.

--- a/App.config
+++ b/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="DbConnection" 
-         connectionString="Host=localhost;port=3306;Database=Client_Schedule;Username=sqlUser=U07qpU;Password=Passw0rd!;database=U07qpU;persistsecurityinfo=True" 
+         connectionString="Host=localhost;port=3306;Database=Client_Schedule;Username=sqlUser;Password=Passw0rd!;" 
          providerName="System.Data.MySQLClient" />
   </connectionStrings>
 </configuration>
