--- a/Appointment App.csproj
+++ b/Appointment App.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="Database\DBConnection.cs" />
     <Compile Include="Database\Logic.cs" />
     <Compile Include="LoginForm.cs">
