--- a/App.config
+++ b/App.config
@@ -1,11 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <connectionStrings>
-    <add name="DbConnection" 
-         connectionString="Host=localhost;port=3306;Database=Client_Schedule;Username=sqlUser;Password=Passw0rd!;" 
-         providerName="System.Data.MySQLClient" />
+    <add name="DbConnection" connectionString="Host=localhost;port=3306;Database=Client_Schedule;Username=sqlUser;Password=Passw0rd!;" providerName="System.Data.MySQLClient"/>
   </connectionStrings>
 </configuration>
