fixed screen autosize property for main screen and added reports functionality

--- a/Appointment App.csproj
+++ b/Appointment App.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AddAppointment.Designer.cs">
       <DependentUpon>AddAppointment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Appointment.cs" />
     <Compile Include="CreateCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
